// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 1d 1`] = `
{
  "days": [
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    6400,
  ],
  "totalBlobs": [
    5,
  ],
  "totalUniqueBlobs": [
    1,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 7d 1`] = `
{
  "days": [
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    4000,
    6400,
  ],
  "totalBlobs": [
    4,
    5,
  ],
  "totalUniqueBlobs": [
    0,
    1,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 15d 1`] = `
{
  "days": [
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    5900,
    4000,
    6400,
  ],
  "totalBlobs": [
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    1,
    0,
    1,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 30d 1`] = `
{
  "days": [
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    6200,
    5900,
    4000,
    6400,
  ],
  "totalBlobs": [
    6,
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    0,
    1,
    0,
    1,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 180d 1`] = `
{
  "days": [
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    393216,
    6200,
    5900,
    4000,
    6400,
  ],
  "totalBlobs": [
    3,
    6,
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    3,
    0,
    1,
    0,
    1,
  ],
}
`;

exports[`Stats router > getBlobDailyStats > when getting stats for a specific timeframe > should get daily stats for 360d 1`] = `
{
  "days": [
    "2022-10-16T00:00:00.000Z",
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobSizes": [
    6400,
    393216,
    6200,
    5900,
    4000,
    6400,
  ],
  "totalBlobs": [
    6,
    3,
    6,
    5,
    4,
    5,
  ],
  "totalUniqueBlobs": [
    3,
    3,
    3,
    0,
    1,
    0,
    1,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 1d 1`] = `
{
  "avgBlobAsCalldataFees": [
    22000,
  ],
  "avgBlobFees": [
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    22,
  ],
  "days": [
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "66000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "3000",
  ],
  "totalBlobFees": [
    "14417920",
  ],
  "totalBlobGasUsed": [
    "655360",
  ],
  "totalBlocks": [
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 7d 1`] = `
{
  "avgBlobAsCalldataFees": [
    20000,
    22000,
  ],
  "avgBlobFees": [
    5242880,
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    20,
    22,
  ],
  "days": [
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "40000",
    "66000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "2000",
    "3000",
  ],
  "totalBlobFees": [
    "10485760",
    "14417920",
  ],
  "totalBlobGasUsed": [
    "524288",
    "655360",
  ],
  "totalBlocks": [
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 15d 1`] = `
{
  "avgBlobAsCalldataFees": [
    22000,
    20000,
    22000,
  ],
  "avgBlobFees": [
    2883584,
    5242880,
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    22,
    20,
    22,
  ],
  "days": [
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "110000",
    "40000",
    "66000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "5000",
    "2000",
    "3000",
  ],
  "totalBlobFees": [
    "14417920",
    "10485760",
    "14417920",
  ],
  "totalBlobGasUsed": [
    "655360",
    "524288",
    "655360",
  ],
  "totalBlocks": [
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 30d 1`] = `
{
  "avgBlobAsCalldataFees": [
    22000,
    22000,
    20000,
    22000,
  ],
  "avgBlobFees": [
    8650752,
    2883584,
    5242880,
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    22,
    22,
    20,
    22,
  ],
  "days": [
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "44000",
    "110000",
    "40000",
    "66000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "2000",
    "5000",
    "2000",
    "3000",
  ],
  "totalBlobFees": [
    "17301504",
    "14417920",
    "10485760",
    "14417920",
  ],
  "totalBlobGasUsed": [
    "786432",
    "655360",
    "524288",
    "655360",
  ],
  "totalBlocks": [
    1,
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 180d 1`] = `
{
  "avgBlobAsCalldataFees": [
    22000,
    22000,
    22000,
    20000,
    22000,
  ],
  "avgBlobFees": [
    8650752,
    8650752,
    2883584,
    5242880,
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    22,
    22,
    22,
    20,
    22,
  ],
  "days": [
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "22000",
    "44000",
    "110000",
    "40000",
    "66000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "1000",
    "2000",
    "5000",
    "2000",
    "3000",
  ],
  "totalBlobFees": [
    "8650752",
    "17301504",
    "14417920",
    "10485760",
    "14417920",
  ],
  "totalBlobGasUsed": [
    "393216",
    "786432",
    "655360",
    "524288",
    "655360",
  ],
  "totalBlocks": [
    1,
    1,
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getBlockDailyStats > when getting stats for a specific timeframe > should get daily stats for 360d 1`] = `
{
  "avgBlobAsCalldataFees": [
    24200,
    22000,
    22000,
    22000,
    20000,
    22000,
  ],
  "avgBlobFees": [
    5767168,
    8650752,
    8650752,
    2883584,
    5242880,
    4805973.333333333,
  ],
  "avgBlobGasPrices": [
    22,
    22,
    22,
    22,
    20,
    22,
  ],
  "days": [
    "2022-10-16T00:00:00.000Z",
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalBlobAsCalldataFees": [
    "72600",
    "22000",
    "44000",
    "110000",
    "40000",
    "66000",
  ],
  "totalBlobAsCalldataGasUsed": [
    "3300",
    "1000",
    "2000",
    "5000",
    "2000",
    "3000",
  ],
  "totalBlobFees": [
    "17301504",
    "8650752",
    "17301504",
    "14417920",
    "10485760",
    "14417920",
  ],
  "totalBlobGasUsed": [
    "786432",
    "393216",
    "786432",
    "655360",
    "524288",
    "655360",
  ],
  "totalBlocks": [
    1,
    1,
    1,
    1,
    1,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 1d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
  ],
  "days": [
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    3,
  ],
  "totalUniqueReceivers": [
    2,
  ],
  "totalUniqueSenders": [
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 7d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
  ],
  "days": [
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    2,
  ],
  "totalUniqueSenders": [
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 15d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
  ],
  "days": [
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    5,
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 30d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
    100,
  ],
  "days": [
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 180d 1`] = `
{
  "avgMaxBlobGasFees": [
    100,
    100,
    100,
    100,
    100,
  ],
  "days": [
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    1,
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    1,
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    1,
    1,
    5,
    2,
    3,
  ],
}
`;

exports[`Stats router > getTransactionDailyStats > when getting stats for a specific timeframe > should get daily stats for 360d 1`] = `
{
  "avgMaxBlobGasFees": [
    110,
    100,
    100,
    100,
    100,
    100,
  ],
  "days": [
    "2022-10-16T00:00:00.000Z",
    "2023-05-10T00:00:00.000Z",
    "2023-08-03T00:00:00.000Z",
    "2023-08-20T00:00:00.000Z",
    "2023-08-28T00:00:00.000Z",
    "2023-08-31T00:00:00.000Z",
  ],
  "totalTransactions": [
    3,
    1,
    2,
    5,
    2,
    3,
  ],
  "totalUniqueReceivers": [
    3,
    1,
    1,
    3,
    1,
    2,
  ],
  "totalUniqueSenders": [
    3,
    1,
    1,
    5,
    2,
    3,
  ],
}
`;
